# ComfyUI-WorkflowManager-beta

./: README.md  __init__.py  pyproject.toml
core/: __init__.py  constants.py  logger.py  nodes.py
handlers/: __init__.py  file_operations.py  static_handler.py  websocket_handler.py.bak
utils/: __init__.py  file_utils.py  validation.py
web/: extension.js  style.css  user.css
web/modules/core/: communication-api.js  config.js  sidebar-registration.js
web/modules/features/: custom-icon-manager.js  floating-manager.js  notes-system.js  workflow-loader.js  workflow-manager.js  workflow-note-editor.js  workflow-ui.js
web/modules/ui/: interaction-system.js  theme-system.js  ui-manager.js
